--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langchain = "^0.1.14"
 langchain-openai = "^0.1.1"
 python-dotenv = "^1.0.1"
 streamlit-pydantic = "^0.6.0"
+pydantic = "~1.10.11"
 
 
 [build-system]
