--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ langchain-openai = "^0.1.1"
 python-dotenv = "^1.0.1"
 streamlit-pydantic = "^0.6.0"
 pydantic = "~1.10.11"
+st-pages = "^0.4.5"
 
+[tool.poetry.scripts]
+trip-planner = "trip_planner.Home:main"
 
 [build-system]
 requires = ["poetry-core"]
