added database migrations for postgres

--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -12,3 +12,8 @@ icon = ":airplane:"
 path = "trip_planner/pages/settings.py"
 name = "Settings"
 icon = ":gear:"
+
+[[pages]]
+path = "trip_planner/pages/trips.py"
+name = "Trips"
+icon = ":calendar:"
