--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ python-dotenv = "^1.0.1"
 streamlit-pydantic = "^0.6.0"
 pydantic = "~1.10.11"
 st-pages = "^0.4.5"
+streamlit-extras = "^0.4.2"
+alembic = "^1.13.1"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
+asyncpg = "^0.29.0"
 
 [tool.poetry.scripts]
 trip-planner = "trip_planner.Home:main"
